# queens-library-books

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  credits.txt  formate.toml  get_data.py  index.html  map.html  plot.py  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
books/: index.html  map.html
data/: books.json  libraries.json
queens_library_books/: __init__.py  books.py  libraries.py  plot_utils.py  utils.py
